feature(tweet): add sentence service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,10 @@ spring.social.twitter.appSecret=${param.twitter.appSecret}
 twitter.access.token=${param.twitter.access.token}
 twitter.access.token.secret=${param.twitter.access.token.secret}
 
-# cron retweet every hours
-app.retweet.cron=0 0 * * * ?
+# cron retweet every days
+app.retweet.cron=0 0 0 * * ?
+# cron sent sentence
+app.tweet-sentence.cron=0 0 8 * * ?
 # nb tweets to proceed each time
 app.nbTweets = 2
 
