--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,6 +5,8 @@ twitter.access.token.secret=
 
 # cron retweet every hours
 app.retweet.cron=0 0 * * * ?
+# cron sent sentence
+app.tweet-sentence.cron=0 0 0 * * ?
 # nb tweets to proceed each time
 app.nbTweets = 2
 
